@@ -202,6 +202,9 @@ protected:
 #endif // TIGHTDB_DEBUG
 
     size_t m_ref_specSet;
+
+    // Overriding virtual method in Table::Parent.
+    bool subtables_have_shared_spec() { return true; }
 };
 
 
