@@ -113,6 +113,13 @@ public:
     /// (except add_column()).
     bool is_valid() const { return m_columns.HasParent(); }
 
+    /// A shared spec is a column specification that in general
+    /// applies to many tables. A table is not allowed to directly
+    /// modify its own spec if it is shared. A shared spec may only be
+    /// modified via the closest ancestor table that has a nonshared
+    /// spec. Such an ancestor is guaranteed to exist.
+    bool has_shared_spec() const;
+
     // Schema handling (see also <tightdb/spec.hpp>)
     Spec&       get_spec();
     const Spec& get_spec() const;
@@ -382,9 +389,9 @@ private:
 #ifdef TIGHTDB_ENABLE_REPLICATION
     struct LocalTransactLog;
     LocalTransactLog get_local_transact_log();
-    // Precondition: 1 <= end - begin
+    // Condition: 1 <= end - begin
     size_t* record_subspec_path(const Spec*, size_t* begin, size_t* end) const;
-    // Precondition: 1 <= end - begin
+    // Condition: 1 <= end - begin
     size_t* record_subtable_path(size_t* begin, size_t* end) const;
     friend class Replication;
 #endif
@@ -404,6 +411,9 @@ class Table::Parent: public ArrayParent {
 protected:
     friend class Table;
 
+    // ColumnTable must override this method and return true.
+    virtual bool subtables_have_shared_spec() { return false; }
+
     /// Must be called whenever a child Table is destroyed.
     virtual void child_destroyed(size_t child_ndx) = 0;
 
@@ -417,6 +427,17 @@ protected:
 
 
 // Implementation:
+
+inline bool Table::has_shared_spec() const
+{
+    const Array& top_array = m_top.IsValid() ? m_top : m_columns;
+    ArrayParent* parent = top_array.GetParent();
+    if (!parent) return false;
+#ifdef TIGHTDB_HAVE_RTTI
+    TIGHTDB_ASSERT(dynamic_cast<Parent*>(parent));
+#endif
+    return static_cast<Parent*>(parent)->subtables_have_shared_spec();
+}
 
 inline size_t Table::create_empty_table(Allocator& alloc)
 {
